k8s/shoppingclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingclient-deployment
  namespace: dev-test
  labels:
    app: shoppingclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingclient
  template:
    metadata:
      labels:
        app: shoppingclient
    spec:
      containers:
        - name: shoppingclient
          image: winsontay/shoppingclient:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingclient-service
  namespace: dev-test
spec:
  selector:
    app: shoppingclient
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: dev-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shoppingclient-service
              port:
                number: 8100
